momo-infra/Kubernetes/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-nginx
spec:
  tls:
    - hosts:
      - btkv.tech
      secretName: momo-main-cert
  ingressClassName: nginx
  rules:
    - host: btkv.tech
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
